Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2586,7 +2586,6 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 			padding: 56.25%;
-			height: 144px;
 			overflow: hidden;
 		}
 
